# Tensor

./: pyproject.toml  test_tensor.py
