[tool.poetry]
name = "tensor"
version = "0.1.0"
description = ""
authors = ["akharkov88 <akharkov88@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.18.1"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
